Ajustes no Cabeçalho e Adicionado Primeira Seção

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OptimusTech</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/cores.css">
 </head>
 
 <body>
@@ -38,6 +39,10 @@
         </div>
       </navbar>
     </div>
+    <header>
+        <h6 class="sub_cabecalho">Sobre nós</h6>
+        <h1 class="titulo_cabecalho">Por que somos diferentes?</h1>
+        <p class="conteudo_cabecalho">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+    </header>
 </body>
-
 </html>
